<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="5sp"
    tools:context=".ui.main.WalletFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@drawable/wallet_qr_bg"
                    android:elevation="5dp" />

                <TextView
                    android:id="@+id/receive_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20sp" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="10.002"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/show_tutorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_show_tutorial" />

                <Button
                    android:id="@+id/show_seed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_show_seed"
                    android:textColor="#FF0000" />

                <Button
                    android:id="@+id/clear_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_purge"
                    android:textColor="#FF0000" />

                <Button
                    android:id="@+id/donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_donate" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>