<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:padding="15dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_hello"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_helper1"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sel_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/setup_radio_new" />

            <RadioButton
                android:id="@+id/sel_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_radio_import" />
        </RadioGroup>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_helper2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_helper3"
            android:textAlignment="center"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/seed_bg"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_create_intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_helper2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setup_helper4"
            android:textAlignment="center"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/check1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/check2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/check3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/check4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/setup_next" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/import1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setup_helper5"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setup_helper6"
                android:textAlignment="center"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/word1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/word24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/button_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/setup_next" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>